--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "task1": "nodemon ./task1.js",
+    "task2": "nodemon ./task2.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,5 +18,9 @@
     "url": "https://github.com/rayblair06/learning-nodejs/issues"
   },
   "homepage": "https://github.com/rayblair06/learning-nodejs#readme",
-  "dependencies": {}
+  "dependencies": {
+    "csvtojson": "^2.0.10",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7"
+  }
 }
