--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "task1": "nodemon ./task1.js",
     "task2": "nodemon ./task2.js",
+    "build": "babel src -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,9 @@
   "homepage": "https://github.com/rayblair06/learning-nodejs#readme",
   "dependencies": {
     "csvtojson": "^2.0.10"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-latest": "^6.24.1"
   }
 }
