--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "task1": "nodemon ./task1.js",
     "task2": "nodemon ./task2.js",
+    "build": "babel",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +23,8 @@
     "csvtojson": "^2.0.10",
     "fs": "0.0.1-security",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
