--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "task1": "nodemon ./task1.js",
     "task2": "nodemon ./task2.js",
-    "build": "babel",
+    "build": "babel modules -d babel",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +25,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "babel-preset-latest": "^6.24.1"
   }
 }
