--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "csvtojson": "^2.0.10"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-latest": "^6.24.1"
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "babel-cli": "^6.26.0"
   }
 }
