--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
   },
   "homepage": "https://github.com/rayblair06/learning-nodejs#readme",
   "dependencies": {
-    "csvtojson": "^2.0.10",
-    "fs": "0.0.1-security",
-    "path": "^0.12.7"
+    "csvtojson": "^2.0.10"
   }
 }
