--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "task": "nodemon --exec babel-node ./task.js",
     "task1": "nodemon --exec babel-node ./task1.js",
     "task2": "nodemon --exec babel-node ./task2.js",
     "test": "echo \"Error: no test specified\" && exit 1"
