--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "nodemon --exec babel-node ./src/app.js",
     "lint": "eslint 'src/**' --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "npx sequelize-cli db:migrate",
+    "seed": "npx sequelize-cli db:seed:all"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,9 @@
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
     "joi": "^17.4.2",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.9.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -30,6 +35,7 @@
     "@babel/eslint-parser": "^7.5.4",
     "@babel/node": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
-    "eslint": "^8.1.0"
+    "eslint": "^8.1.0",
+    "sequelize-cli": "^6.3.0"
   }
 }
