--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
     "parser": "@babel/eslint-parser",
     "plugins": [
+        "import"
     ],
     "env": {
         "browser": true,
@@ -30,6 +31,27 @@
         }
     },
     "rules": {
+        "import/order": [
+            2,
+            {
+                "groups": [
+                    "builtin",
+                    "external",
+                    "internal",
+                    "parent",
+                    "sibling",
+                    "index",
+                    "object",
+                    "type"
+                ],
+                "newlines-between": "always",
+                "alphabetize": {
+                    "order": "asc",
+                    "caseInsensitive": true
+                }
+            },
+        ],
+        "import/newline-after-import": [2, { "count": 2 }],
         "no-debugger": 1,
         // Possible errors
         "comma-dangle": [
