--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/register": "^7.16.0",
     "babel-polyfill": "^6.26.0",
     "eslint": "^8.1.0",
+    "eslint-plugin-import": "^2.25.4",
     "sequelize-cli": "^6.3.0"
   }
 }
