--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     "parser": "@babel/eslint-parser",
     "plugins": [
-        "import"
+        "import",
+        "json"
     ],
     "env": {
         "browser": true,
