--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/register": "^7.16.0",
     "babel-polyfill": "^6.26.0",
-    "eslint": "^8.1.0",
+    "eslint": "^8.8.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-json": "^3.1.0",
     "sequelize-cli": "^6.3.0"
   }
 }
