--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.9.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.5.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
