Ignore 'next' for express errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -186,7 +186,14 @@
         "no-shadow": 2,
         "no-undef-init": 2,
         "no-undef": 2,
-        "no-unused-vars": 2,
+        "no-unused-vars": [
+            2,
+            {
+                // Ignore 'next' for express errors
+                // https://github.com/expressjs/generator/issues/78
+                "argsIgnorePattern": "next"
+            }
+        ],
         // Node.js
         "callback-return": 2,
         "no-mixed-requires": 2,
