--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint 'src/**' --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "npx sequelize-cli db:migrate",
+    "migrate-fresh": "npx sequelize-cli db:migrate:undo:all",
     "seed": "npx sequelize-cli db:seed:all"
   },
   "repository": {
