--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon --exec babel-node -r dotenv/config ./src/app.js",
     "lint": "eslint 'src/**' --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint-no-fix": "eslint 'src/**'",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "generate-key": "node ./src/scripts/generateKey.js",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate-fresh": "npx sequelize-cli db:migrate:undo:all",
