--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon --exec babel-node -r dotenv/config ./src/app.js",
     "lint": "eslint 'src/**' --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "generate-key": "node ./src/scripts/generateKey.js",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate-fresh": "npx sequelize-cli db:migrate:undo:all",
     "seed": "npx sequelize-cli db:seed:all"
@@ -22,11 +23,13 @@
   },
   "homepage": "https://github.com/rayblair06/learning-nodejs#readme",
   "dependencies": {
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.9.0",
