--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - postgres
     volumes:
         - ./:/app
+        - /app/node_modules
     env_file:
       - .env
     networks:
