--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 0",
     "generate-key": "node ./src/scripts/generateKey.js",
     "migrate": "npx sequelize-cli db:migrate",
-    "migrate-fresh": "npx sequelize-cli db:migrate:undo:all",
+    "migrate-fresh": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
     "seed": "npx sequelize-cli db:seed:all"
   },
   "repository": {
