--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,20 +12,22 @@ jobs:
   # Placeholder for building our docker image (and maybe deploying to demo site?)
   build:
     runs-on: ubuntu-latest
+    env:
+        NODE_ENV: production
 
     strategy:
       matrix:
         node-version: [16.x, 17.x]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: npm install
+    - name: Install and configure app
       run: |
         npm ci
-      env:
-        NODE_ENV: production
+        cp .env.example .env
+        npm run generate-key
