--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,42 +6,45 @@ on: [pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
+    env:
+        NODE_ENV: test
 
     strategy:
       matrix:
         node-version: [16.x, 17.x]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: npm install
+    - name: Install and configure app
       run: |
         npm ci
-      env:
-        NODE_ENV: test
-    - run: npm run lint-no-fix
+        cp .env.example .env
+        npm run generate-key
+    - run: npm run lint
 
   test:
     runs-on: ubuntu-latest
+    env:
+        NODE_ENV: test
 
     strategy:
       matrix:
         node-version: [16.x, 17.x]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: npm install
+    - name: Install and configure app
       run: |
         npm ci
-      env:
-        NODE_ENV: production
+        cp .env.example .env
+        npm run generate-key
     - run: npm test
