--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node -r dotenv/config ./src/server.js",
+    "start": "nodemon ./src/server.ts -r dotenv/config",
     "lint": "eslint 'src/**' 'tests/**'",
-    "lint-fix": "eslint 'src/**' 'tests/**' --fix ",
+    "lint:fix": "eslint 'src/**' 'tests/**' --fix ",
     "test": "NODE_ENV=test jest",
     "generate-key": "node ./src/scripts/generateKey.js",
     "migrate": "npx sequelize-cli db:migrate",
@@ -38,21 +38,32 @@
     "winston": "^3.5.1"
   },
   "devDependencies": {
-    "babel-jest": "^27.5.0",
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.17.0",
     "@babel/eslint-parser": "^7.5.4",
     "@babel/node": "^7.15.8",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.15.0",
     "@babel/register": "^7.16.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^17.0.17",
+    "@types/pg": "^8.6.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "babel-jest": "^27.5.0",
     "babel-polyfill": "^6.26.0",
     "eslint": "^8.8.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "jest": "^27.5.0",
+    "nodemon": "^2.0.13",
     "sequelize-cli": "^6.3.0",
-    "sequelize-mock": "^0.10.2",
     "superagent": "^7.1.1",
-    "supertest": "^6.2.2"
+    "supertest": "^6.2.2",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
